[gd_scene load_steps=6 format=2]

[ext_resource path="res://fonts/PixelFont.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scripts/MainMenu.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=4]
size = 50
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 40
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 50
font_data = ExtResource( 1 )

[node name="MainMenu" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 50.0
margin_top = 273.0
margin_right = 429.0
margin_bottom = 447.0

[node name="CenterContainer" type="CenterContainer" parent="CenterContainer/VBoxContainer"]
margin_right = 379.0
margin_bottom = 174.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer/CenterContainer"]
margin_right = 379.0
margin_bottom = 174.0
custom_constants/separation = 100

[node name="Title" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer/VBoxContainer"]
margin_right = 379.0
margin_bottom = 38.0
custom_fonts/font = SubResource( 4 )
text = "Dodge the creeps"

[node name="Start" type="Button" parent="CenterContainer/VBoxContainer/CenterContainer/VBoxContainer"]
margin_top = 138.0
margin_right = 379.0
margin_bottom = 174.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
text = "Start"
flat = true

[node name="Score" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -20.0
margin_top = 20.0
margin_right = 20.0
margin_bottom = 58.0
custom_fonts/font = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
[connection signal="pressed" from="CenterContainer/VBoxContainer/CenterContainer/VBoxContainer/Start" to="." method="_on_Start_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_MessageTimer_timeout"]
